Note: this log is only for notes post-1.0-conversion

Version 3.1.1
-----------------------------------------------------------------
28 September 2007
+ Fixed bug #1785639. Unable to move elements up and down.
+ Fixed bug #1785626. Unable to delete option set.
+ Fixed bug #1785585. List archive would not function.

22 August 2007
+ Reduced control panel info.

Version 3.1.0
-----------------------------------------------------------------
5 April 2007
+ Added German translations
+ Update language functions.

5 March 2007
+ Changed control panel icon

Version 3.0.6
------------------------------------------------------------------
22 February 2007
+ Fixed email bug.

19 February 2007
+ Added translate call.

16 January 2007
+ Added missing "export" directory creation.
+ Removed all global core calls


Version 3.0.5
-------------------------------------------------------------------
21 November 2006
+ Small clarification to readme.txt
+ Fixed typo in FormManager

Version 3.0.4
-------------------------------------------------------------------
15 November 2006
+ Simplified install.sql
+ Fixed some incompatible errorMessage function calls

Version 3.0.3
-------------------------------------------------------------------
+ Fixed element move bug submitted by the great JYDAllStar from his
  underground bunker